--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {},
   "dependencies": {
     "course-cl": ">=0.0.1",
-    "cirsim": ">2.0.8"
+    "cirsim": ">=2.0.8"
   }
 }
