--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "course-cl": ">=0.0.1",
-    "cirsim": "~2.1.1"
+    "cirsim": "~2.1.3",
+    "course-cl": ">=0.0.1"
   }
 }
