--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "cirsim": "^2.1.17",
-    "course-cl": ">=0.0.1"
+    "course-cl": ">=0.0.1",
+    "dialog-cl": "^1.0.7",
+    "site-cl": "~0.0.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "webpack": "^5.74.0"
+    "webpack": "^5.88.1"
   }
 }
